--- a/css/style.scss
+++ b/css/style.scss
@@ -5,8 +5,12 @@ $orangeColor: #ff7d27;
 $blueColor: #214d7c;
 $goldColor: #ffd479;
 $blackColor: #000;
+$blackblueColor: #1a3d62;
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background: $blueColor;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -19,17 +23,15 @@ header {
     align-items: center;
     top:0px;
     position: fixed;
-    padding: 0px 20px;
-    background: $blueColor;
+    background: $blackblueColor;
     color: $whiteColor;
 
     .line {
         width: 100%;
         height: 3px;
         display: block;
-        margin: 0 10px;
         background: $goldColor;
-        box-shadow: 0px 0px 10px 0px $goldColor;
+        box-shadow: 0px 0px 6px 0px $goldColor;
     }
     .content__txt {
         max-width: 1280px;
@@ -65,20 +67,19 @@ section {
 
 footer {
     width: 100%;
-    padding: 0px 20px;
-    color: $whiteColor;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: $blackblueColor;
+    color: $whiteColor;
     &::before {
         width: 100%;
         height: 3px;
         content: '';
         display: block;
-        margin: 0 auto 10px;
         transition: 1s;
         background: $goldColor;
-        box-shadow: 0px 0px 10px 0px $goldColor;
+        box-shadow: 0px 0px 6px 0px $goldColor;
     }
     .content__txt {
         max-width: 1280px;
